cmake_minimum_required(VERSION 3.17)
project(CMS_370_BREXX C)

set(CMAKE_C_STANDARD 90)

include_directories(.)

add_definitions(-D__CMS__)

add_executable(CMS_370_BREXX
        abbrev.c
        abs.c
        add.c
        address.c
        atan2.c
        b2x.c
        bintree.c
        bintree.h
        bio.h
        bitand.c
        bitor.c
        bitxor.c
        bmem.c
        bmem.h
        bool.c
        builtin.c
        c2d.c
        c2x.c
        center.c
        changest.c
        charin.c
        charout.c
        chars.c
        cmsfunc.c
        compare.c
        compile.c
        compile.h
        config.h
        context.c
        context.h
        copies.c
        countstr.c
        d2c.c
        d2x.c
        datatype.c
        date.c
        dec.c
        delstr.c
        delword.c
        div.c
        dqueue.c
        dqueue.h
        equal.c
        error.c
        errortxt.c
        expose.c
        expr.c
        format.c
        gcvt.c
        hashvalu.c
        inc.c
        index.c
        insert.c
        intdiv.c
        interpre.c
        interpre.h
        justify.c
        lastpos.c
        ldefs.h
        lerror.h
        linein.c
        lineout.c
        lines.c
        lmath.c
        lmvs.h
        lower.c
        lstring.c
        lstring.h
        ltime.c
        main.c
        mod.c
        mult.c
        neg.c
        nextsymb.c
        nextsymb.h
        os.h
        overlay.c
        pow.c
        print.c
        read.c
        reverse.c
        rexx.c
        rexx.h
        rexxfunc.c
        right.c
        rxconio.h
        rxconv.c
        rxdefs.h
        rxexcomm.c
        rxfiles.c
        rxmath.c
        rxmvs.h
        rxstr.c
        rxword.c
        sign.c
        soundex.c
        space.c
        stack.c
        stack.h
        strip.c
        sub.c
        substr.c
        subword.c
        template.c
        trace.c
        trace.h
        translat.c
        trunc.c
        upper.c
        variable.c
        variable.h
        verify.c
        word.c
        wordidx.c
        wordlen.c
        wordpos.c
        words.c
        write.c
        x2b.c
        x2c.c
        x2d.c
        xrange.c)
